envoy/hcm/lab3/lab3.yaml
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: listener_http
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            response_headers_to_add:
              - header:
                  key: "lab" 
                  value: "3"
            name: route
            virtual_hosts:
            - name: vh
              request_headers_to_add:
                - header:
                    key: vh
                    value: "one"
              domains: ["*"]
              routes:
                - match:
                    prefix: "/json"
                  route:
                    cluster: instance_1
                  response_headers_to_add:
                    - header:
                        key: "json"
                        value: "%REQ(hello)%"
                - match:
                    prefix: "/"
                  route:
                    cluster: instance_1

                



  clusters:
  - name: instance_1
    connect_timeout: 5s
    load_assignment:
      cluster_name: instance_1
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 3030
